--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@ silver spotted bengal cats,Bengal Kittens For Sale, bengal kittens for sale near
                 <img src="images/Sassy-Snow.jpeg" alt="Snow Bengal Cat For Sale">
                 <h3>SNOW BENGAL KITTENS FOR SALE</h3>
                 <p>Snow Bengal Kitten For Sale. See our available Snow Bengal Kittens, ready and available for adoption. </p>
-                <a href="course.html" "hero-btn">AVAILABLE SNOW BENGALS</a>
+                <a href="course -3.html">AVAILABLE SNOW BENGALS</a>
             </div>
             <div class="facility-col">
                 <img src="images/Erica-Brown.jpeg" alt="Brown Bengal Cat For Sale">
                 <h3>BROWN BENGAL KITTENS FOR SALE</h3>
                 <p>Brown Bengal Kitten For Sale. Click on the link below to see our available Brown Bengals. Make your choice and take your kiten home!</p>
-                <a href="course -1.html" "hero-btn">AVAILABLE BROWN BENGALS</a>
+                <a href="course -1.html">AVAILABLE BROWN BENGALS</a>
             </div>
             <div class="facility-col">
                 <img src="images/Bridget-Silver.jpeg" alt="Silver Bengal Cat For Sale">
                 <h3>SILVER BENGAL KITTENS FOR SALE</h3>
                 <p>Silver Bengal Kitten For Sale. Contact us now and get one of our Silver Bengals with free transportation. Click on the link below to see our Available Silver Bengals</p>
-                <a href="course -2.html" "hero-btn">AVAILABLE SILVER BENGALS</a>
+             <a href="course.html">AVAILABLE SILVER BENGALS</a>
             </div>
             <div class="facility-col">
                 <img src="images/Willow-black.jpeg" alt="Black Bengal Cat For Sale">
                 <h3>BLACK BENGAL KITTENS FOR SALE</h3>
                 <p>Black Bengal Kitten For Sale. Click on the link below to see our available Brown Bengals. Make your choice and take your kiten home!</p>
-                <a href="course -1.html" "hero-btn">AVAILABLE BLACK BENGALS</a>
+                <a href="course -2.html">AVAILABLE BLACK BENGALS</a>
             </div>
         </div>
 </section>
