--- a/course.html
+++ b/course.html
@@ -46,7 +46,7 @@ silver spotted bengal cats, Bengal Kittens For Sale, bengal kittens for sale nea
         </nav>
 
         
-        <h1><center><b>Snow Bengal Kittens For Sale - Bengal Cats For Sales</b></center></h1>
+        <h1><center><b>Silver Bengal Kittens For Sale - Bengal Cats For Sales</b></center></h1>
     </section>
     
 <!---------- Facilities ---------->
